--- a/style.css
+++ b/style.css
@@ -1,52 +1,187 @@
-body {
-	background: #c5cae9;
+.img-responsive, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+	height: 400px;
+	width: auto;
+}
+    html,
+    body {
+	background-color:#009688;
+    margin:0;
+    padding:0;
+    height:100%;
+    }
+    #wrapper {
+    min-height:100%;
+    position:relative;
+    }
+    #header {
+    
+    box-shadow: 0px 0px 10px #888888;
+    }
+    #content {
+    padding:10px;
+    padding-bottom:80px; /* Height of the footer element */
+    }
+    #footer {
+    text-align: center;
+    width:100%;
+    height:50px;
+    position:fixed;
+    bottom:0px;
+    left:0px;
+    background:#ecf0f1;
+    box-shadow: 0px 0px 10px #888888;
+    }
+/*    --------------------------------------------------
+	:: Login Section
+	-------------------------------------------------- */
+#box{
+		background-color:#ecf0f1;
+		border-radius: 5px;.
+		position: relative;
+}	
+.jumbotron#login{
+
+	border-radius: 5px;
+    padding-top: 50px;
+	border-style: 5px solid #1fa67b;
 }
 
-div.jumbotron#login{
-	box-shadow: 10px 10px 5px #888888;
-	background-color: #eee;
-	color: #5c6bc0;
-	position: relative;
-	top: 10px;
-	#text-align: left;
+#login .form-wrap {
+    width: 30%;
+    margin: 0 auto;
 }
-.container#login{position: relative;
-	width: 500px;
+#login h1 {
+    color: #1fa67b;
+    font-size: 18px;
+    text-align: center;
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+#login .form-group {
+    margin-bottom: 25px;
+}
+#login .checkbox {
+    margin-bottom: 20px;
+    position: relative;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+#login .checkbox.show:before {
+    content: '\e013';
+    color: #1fa67b;
+    font-size: 17px;
+    margin: 1px 0 0 3px;
+    position: absolute;
+    pointer-events: none;
+    font-family: 'Glyphicons Halflings';
+}
+#login .checkbox .character-checkbox {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    vertical-align: middle;
+    display: inline-block;
+}
+#login .checkbox .label {
+    color: #6d6d6d;
+    font-size: 13px;
+    font-weight: normal;
+}
+#login .btn.btn-custom {
+    font-size: 14px;
+	margin-bottom: 20px;
+}
+#login .forget {
+    font-size: 13px;
+	text-align: center;
+	display: block;
 }
 
-.jumbotron p{
-	font-size: 15px;
+/*    --------------------------------------------------
+	:: Inputs & Buttons
+	-------------------------------------------------- */
+.form-control {
+    color: #212121;
 }
-.jumbotron a{
-	text-decoration: underline;
+.btn-custom {
+    color: #fff;
+	background-color: #1fa67b;
 }
-.jumbotron#banner{
-	box-shadow: 10px 10px 5px #888888;
-	background-color: #eee;
-	color: #5c6bc0;
-	height: 300px;
-	width: 850px;
-	margin-bottom: auto;
-	margin-top: auto;
+.btn-custom:hover,
+.btn-custom:focus {
+    color: #fff;
 }
-#logo{
-	float: left;
-	position: absolute;
-	top: 0px;
-	border-radius: 10px;
+#type.btn{
+	margin-top: 10px;
+}
+.modal-dialog {
+    width: 300px;
+}
+.modal-footer {
+    height: 110px;
+    margin: 0;
+}
+.modal-footer .btn {
+	margin-bottom:10px;
+    font-weight: bold;
+}
+.modal-footer .progress {
+    display: none;
+    height: 32px;
+    margin: 0;
+}
+.input-group-addon {
+    color: #fff;
+    background: #3276B1;
 }
 
-#userName, #psw {
-	color: #bbb;
+/*    --------------------------------------------------
+    :: Footer
+	-------------------------------------------------- */
+
+
+/*    --------------------------------------------------
+    :: signup
+	-------------------------------------------------- */
+	
+#signup.container {
+	width:750px;
+	background-color: #ecf0f1;
+	border-radius: 5px;
+	padding-bottom:10px;
+	padding-top:10px;
+	margin-top:-10px;
+	
 }
 
-.container-fluid {
-	background-color: #eee;
+#signup  input[type='text'],input[type='date'] {
+	width:500px;
 }
-.form-group {
-	#text-align: left;
+
+/*    --------------------------------------------------
+    :: admin
+	-------------------------------------------------- */
+
+.container-fluid{
+	box-shadow: 0px 0px 10px #888888;
 }
-#DoctorViewInnerbox{
-width: 320px;
-height: 240px;
+.container .jumbotron{
+	position:relative;
+	margin-left:200px;
+	margin-right:50px;
+}
+.container#left-panel{
+	height:100%;
+	position:absolute;
+	margin-top:-40px;
+	width:20%;
+	float:left;
+	box-shadow: 0px 0px 10px #888888;
+	z-index:-3;
+	background-color:#ecf0f1;
 }
